style.css
/* GENERAL */

@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');

/*
*
{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
*/

a{text-decoration:none}

li{list-style: none;}

.d-flex{display: flex;}

h1{
    font-size: 1.2em;
    font-weight: 700;
}

h2{
    font-size: 1.1em;
    font-weight: 700;
}

h3{
    font-size: 1em;
    font-weight: 700;
}

p{
    font-size: 0.9em;
    font-weight: 400;
}

/* <!---------------------------- BODY ----------------------------> */

body{
    background-color:white ;
    font-family: 'Raleway', sans-serif;
    color: black;
    max-width: 1400px;
    margin: 0 auto;
}

/* <!----------------HEADER----------------> */

header{
    margin: 40px 0 30px 0;
    max-width: 1400px;
    justify-content: space-between;
}

#headerNav{
    width: 350px;
}

#headerNav ul{
    justify-content: space-between;
    padding: 0;
}

#headerNav li a{
    font-size: 0.8em;
    font-weight: 400;
    color:#0065FC;
}

#headerNav li:nth-child(2) a{
    color:#000;
}

#headerNav li:nth-child(3) a{
   font-weight: 700;
}

#headerNav li a:hover{
    color:#0065FC;
    font-weight: 700;
}

/* <!----------------MAIN----------------> */

#BANNER{
    max-width: 1400px;   
}

#search, #filter{
    margin-bottom: 10px;
}


.fa-map-marker-alt{
color:black;
background-color:#F2F2F2;
align-self: center;
padding: 12px;
border-top-left-radius:  10px;
border-bottom-left-radius:  10px;
border-style:none;
}

form #input{
    height: 40px; 
    margin-right: 0px;
    font-weight: 700;
    border-style: solid;
    border-color: #F2F2F2;
    padding-left: 10px;
}

form #submit{
    background-color:#0065FC;
    height: 40px;
    color: #F2F2F2;  
    border-style: solid;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    margin-left: -10px;
}


#filter{

    font-weight: 700;
    width: 900px;
    height: auto;
    align-items: center;
}

.filterItems a:hover{
    color: #0065FC ;
    font-size: 1.1em;
}


.fa-ul{
    display: flex;
    justify-content: space-between;

}

.filterItems i{
    padding: 12px 10px;
    background-color: #F2F2F2;
    color:#0065FC;
    border-radius: 50%;
    height: 18px;
    width: 21px;
    text-align: center;
}

.filterTxt{
    border: 1px solid #F2F2F2;
    padding: 10px 10px 11px 24px;
    border-left: none;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
    margin-left: -17px;
    margin-right: 17px;
}

.fa-info{
color:#0065FC;
font-size:0.6em ;
align-self: center;
padding: 4px 7px;
border-radius:  20px;
border-style: solid;
border-width: 1px;
margin-right: 6px;
border-color: #F2F2F2;
}

/*<!-- LODGING section (lodging inThisTown + top3 lodging)-->*/

#LODGING{
max-width: 1400px;
padding-top: 20px;
justify-content:space-between;
}

article{
background-color:lemonchiffon;
padding:0; 
border-radius: 20px;
border-style: solid;
border-color: indigo;
flex: 2;
margin-right: 40px;
}

aside{
background-color:lemonchiffon;
padding:0; 
border-radius: 20px;
border-style: solid;
border-color: indigo;
flex: 1;
}

#thisTownTitle{
    margin-top: 30px;
    margin-left: 50px;
}

#LODGING figure{
    background-color:#669966;
    padding:7px;
    border-radius: 25px;
    box-shadow: 2px 6px 6px #1b1b1b;
}

#thisTownPictures img{
	width: 225px;
	height: 150px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

#thisTownPictures figcaption{
    line-height:0.3em;
    padding-left: 10px;
    padding-bottom: 8px;
}

.fa-star{
    color:#0065FC;
    font-size: 0.8em;
}

.greystar{
    color:#F2F2F2;
}

#thisTownMore{
    margin-left: 40px;
}

#popLodging{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

#popLodgingTitle{
    justify-content: space-around;
    align-items:center;
    margin-top: -40px;
}

#popLodgingRanking{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin-top: -40px;}

#popLodging img{
    flex: 1;
    background-size: 100px 100px;
	width: 130px;
	height: 130px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

#popLodging figcaption{
flex: 2;
}


/*<!----- ACTIVITY section (activity inThisTown)----->*/

/*<!--partie activity-->*/

#ACTIVITY{
max-width: 1400px;    
}

#ACTIVITY h2{
    margin-top: 30px;
    margin-left: 45px;
    margin-bottom: 0px;
}

#ACTIVITY, #activityTitle, #activityPictures{
    border-style: double;
    border-color: teal;  
}

#activityPictures{
    width: 1400px;
    justify-content: space-between;
padding:0;
margin: 0;
}

#actColumn1 figure, #actColumn3 figure{
    background-color:white;
    border-radius: 25px;
    width:75%;
    height: 450px;
    box-shadow: 1px 2px 10px #3f3f3f; 
}

#actColumn2 figure, #actColumn4 figure{
    background-color:white;
    border-radius: 25px;
    width:75%;
    height: 200px;
    box-shadow: 1px 2px 10px #3f3f3f; 
}


#ACTIVITY figcaption{
 padding: 10px 10px; 
 font-size: 1em;
 font-weight: 700;
}

#actColumn1 img, #actColumn3 img{
    width: 100%;
    height: 90%;
    object-fit: cover;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px; 
}

#actColumn2 img, #actColumn4 img{
    width: 100%;
    height:75%;
    object-fit: cover;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
}

/* FOOTER */

#footerNav{
    justify-content:flex-start;
}

#footerNav ul{
    width: 300px;
    padding-left:0;
}

#footerNav ul li{
    padding-bottom:5px;
    
}

#footerNav li a{
    font-size: 0.8em;
    font-weight: 400;
    color:black;
}

#footerNav li p{
    font-size: 0.8em;
    font-weight: 700;
    color:black;
    margin-bottom: 8px;
}

/*commentaire
.class
#id
*/

